# master_thesis_project

./: README.md
data_analysis/data/: jobtitles_mapping_overview.csv  skills_mapping_overview.csv
data_analysis/notebooks/: expert_profiles_data_analysis.ipynb
data_augmentation/notebooks/: expert_profiles_data_cleaning_and_augmentation.ipynb
evaluation/data/: evaluation_results.csv
evaluation/notebooks/: evaluate_search_results.ipynb  evaluation_results.ipynb
experimental_runs/indexing/data/: bm25_index_fulltext_only_bm25.joblib  bm25_index_structured_fulltext_bm25.joblib  bm25_index_without_fulltext_bm25.joblib  tfidf_index_fulltext_only_matrix.npz  tfidf_index_fulltext_only_vectorizer.joblib  tfidf_index_structured_fulltext_matrix.npz  tfidf_index_structured_fulltext_vectorizer.joblib  tfidf_index_without_fulltext_matrix.npz  tfidf_index_without_fulltext_vectorizer.joblib
experimental_runs/indexing/notebooks/: index_data_lexical_methods.ipynb  index_data_semantic_methods.ipynb
test_collection/relevance_judgements/umbrela/: .gitignore  compute_judgement_agreement.py  create_qrel_csv_from_judgements.py  fix_query_data.py  main.py  map_ids_to relevance_judgments.py  pyproject.toml  queries_test.json  requirements.txt  select_qrels_for_human_judgement.py
test_collection/relevance_judgements/umbrela/prompts/: qrel_zeroshot_expert.txt
test_collection/relevance_judgements/umbrela/umbrela_models/: gpt_judge.py  llm_judge.py
test_collection/relevance_judgements/umbrela/umbrela_models/utils/: common_utils.py
(+9 files in other folders)
